--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv  = "^1.0.1"
 psycopg2-binary= "^2.9.9"
 tenacity       = "^8.2.3"
 email-validator = "^2.0.0"
+pyyaml = "^6.0.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.2"
